src/generated/TrinoSqlParser.ts
// @ts-nocheck — generated by ANTLR (antlr4ng), do not edit
// Generated from src/grammar/TrinoSql.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { TrinoSqlListener } from "./TrinoSqlListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class TrinoSqlParser extends antlr.Parser {
    public static readonly SELECT = 1;
    public static readonly DISTINCT = 2;
    public static readonly ALL = 3;
    public static readonly FROM = 4;
    public static readonly WHERE = 5;
    public static readonly GROUP = 6;
    public static readonly BY = 7;
    public static readonly HAVING = 8;
    public static readonly ORDER = 9;
    public static readonly LIMIT = 10;
    public static readonly WITH = 11;
    public static readonly AS = 12;
    public static readonly JOIN = 13;
    public static readonly INNER = 14;
    public static readonly LEFT = 15;
    public static readonly RIGHT = 16;
    public static readonly FULL = 17;
    public static readonly OUTER = 18;
    public static readonly CROSS = 19;
    public static readonly ON = 20;
    public static readonly USING = 21;
    public static readonly AND = 22;
    public static readonly OR = 23;
    public static readonly NOT = 24;
    public static readonly IN = 25;
    public static readonly IS = 26;
    public static readonly NULL = 27;
    public static readonly TRUE = 28;
    public static readonly FALSE = 29;
    public static readonly LIKE = 30;
    public static readonly BETWEEN = 31;
    public static readonly ASC = 32;
    public static readonly DESC = 33;
    public static readonly UNION = 34;
    public static readonly INTERSECT = 35;
    public static readonly EXCEPT = 36;
    public static readonly VALUES = 37;
    public static readonly INSERT = 38;
    public static readonly INTO = 39;
    public static readonly DELETE = 40;
    public static readonly UPDATE = 41;
    public static readonly SET = 42;
    public static readonly MERGE = 43;
    public static readonly MATCHED = 44;
    public static readonly WHEN = 45;
    public static readonly THEN = 46;
    public static readonly ELSE = 47;
    public static readonly END = 48;
    public static readonly CASE = 49;
    public static readonly CAST = 50;
    public static readonly CREATE = 51;
    public static readonly REPLACE = 52;
    public static readonly TABLE = 53;
    public static readonly VIEW = 54;
    public static readonly SCHEMA = 55;
    public static readonly IF = 56;
    public static readonly EXISTS = 57;
    public static readonly DROP = 58;
    public static readonly ALTER = 59;
    public static readonly RENAME = 60;
    public static readonly TO = 61;
    public static readonly ADD = 62;
    public static readonly COLUMN = 63;
    public static readonly TRUNCATE = 64;
    public static readonly SHOW = 65;
    public static readonly TABLES = 66;
    public static readonly SCHEMAS = 67;
    public static readonly CATALOGS = 68;
    public static readonly COLUMNS = 69;
    public static readonly DESCRIBE = 70;
    public static readonly USE = 71;
    public static readonly CALL = 72;
    public static readonly EXPLAIN = 73;
    public static readonly ANALYZE = 74;
    public static readonly VERBOSE = 75;
    public static readonly LPAREN = 76;
    public static readonly RPAREN = 77;
    public static readonly COMMA = 78;
    public static readonly DOT = 79;
    public static readonly SEMICOLON = 80;
    public static readonly ASTERISK = 81;
    public static readonly SLASH = 82;
    public static readonly PERCENT = 83;
    public static readonly PLUS = 84;
    public static readonly MINUS = 85;
    public static readonly EQ = 86;
    public static readonly NEQ = 87;
    public static readonly LTE = 88;
    public static readonly GTE = 89;
    public static readonly LT = 90;
    public static readonly GT = 91;
    public static readonly STRING = 92;
    public static readonly DECIMAL_VALUE = 93;
    public static readonly INTEGER_VALUE = 94;
    public static readonly IDENTIFIER = 95;
    public static readonly QUOTED_IDENTIFIER = 96;
    public static readonly LINE_COMMENT = 97;
    public static readonly BLOCK_COMMENT = 98;
    public static readonly WS = 99;
    public static readonly RULE_root = 0;
    public static readonly RULE_statements = 1;
    public static readonly RULE_statement = 2;
    public static readonly RULE_query = 3;
    public static readonly RULE_withClause = 4;
    public static readonly RULE_namedQuery = 5;
    public static readonly RULE_columnAliases = 6;
    public static readonly RULE_queryExpressionBody = 7;
    public static readonly RULE_queryPrimary = 8;
    public static readonly RULE_valuesClause = 9;
    public static readonly RULE_querySpecification = 10;
    public static readonly RULE_fromClause = 11;
    public static readonly RULE_whereClause = 12;
    public static readonly RULE_groupByClause = 13;
    public static readonly RULE_havingClause = 14;
    public static readonly RULE_setQuantifier = 15;
    public static readonly RULE_selectItem = 16;
    public static readonly RULE_relation = 17;
    public static readonly RULE_joinType = 18;
    public static readonly RULE_joinCriteria = 19;
    public static readonly RULE_aliasedRelation = 20;
    public static readonly RULE_relationPrimary = 21;
    public static readonly RULE_tableRef = 22;
    public static readonly RULE_orderByClause = 23;
    public static readonly RULE_sortItem = 24;
    public static readonly RULE_limitClause = 25;
    public static readonly RULE_insertStatement = 26;
    public static readonly RULE_queryOrValues = 27;
    public static readonly RULE_columnRefList = 28;
    public static readonly RULE_deleteStatement = 29;
    public static readonly RULE_updateStatement = 30;
    public static readonly RULE_updateAssignment = 31;
    public static readonly RULE_mergeStatement = 32;
    public static readonly RULE_mergeCase = 33;
    public static readonly RULE_mergeUpdateOrDelete = 34;
    public static readonly RULE_createTableStatement = 35;
    public static readonly RULE_tableElement = 36;
    public static readonly RULE_createViewStatement = 37;
    public static readonly RULE_createSchemaStatement = 38;
    public static readonly RULE_dropStatement = 39;
    public static readonly RULE_alterTableStatement = 40;
    public static readonly RULE_truncateStatement = 41;
    public static readonly RULE_showStatement = 42;
    public static readonly RULE_describeStatement = 43;
    public static readonly RULE_useStatement = 44;
    public static readonly RULE_callStatement = 45;
    public static readonly RULE_explainStatement = 46;
    public static readonly RULE_expression = 47;
    public static readonly RULE_booleanExpression = 48;
    public static readonly RULE_predicate = 49;
    public static readonly RULE_comparisonOperator = 50;
    public static readonly RULE_valueExpression = 51;
    public static readonly RULE_primaryExpression = 52;
    public static readonly RULE_whenClause = 53;
    public static readonly RULE_functionCall = 54;
    public static readonly RULE_functionName = 55;
    public static readonly RULE_columnRef = 56;
    public static readonly RULE_literal = 57;
    public static readonly RULE_type = 58;
    public static readonly RULE_typeParam = 59;
    public static readonly RULE_qualifiedName = 60;
    public static readonly RULE_identifier = 61;

    public static readonly literalNames = [
        null, "'SELECT'", "'DISTINCT'", "'ALL'", "'FROM'", "'WHERE'", "'GROUP'", 
        "'BY'", "'HAVING'", "'ORDER'", "'LIMIT'", "'WITH'", "'AS'", "'JOIN'", 
        "'INNER'", "'LEFT'", "'RIGHT'", "'FULL'", "'OUTER'", "'CROSS'", 
        "'ON'", "'USING'", "'AND'", "'OR'", "'NOT'", "'IN'", "'IS'", "'NULL'", 
        "'TRUE'", "'FALSE'", "'LIKE'", "'BETWEEN'", "'ASC'", "'DESC'", "'UNION'", 
        "'INTERSECT'", "'EXCEPT'", "'VALUES'", "'INSERT'", "'INTO'", "'DELETE'", 
        "'UPDATE'", "'SET'", "'MERGE'", "'MATCHED'", "'WHEN'", "'THEN'", 
        "'ELSE'", "'END'", "'CASE'", "'CAST'", "'CREATE'", "'REPLACE'", 
        "'TABLE'", "'VIEW'", "'SCHEMA'", "'IF'", "'EXISTS'", "'DROP'", "'ALTER'", 
        "'RENAME'", "'TO'", "'ADD'", "'COLUMN'", "'TRUNCATE'", "'SHOW'", 
        "'TABLES'", "'SCHEMAS'", "'CATALOGS'", "'COLUMNS'", "'DESCRIBE'", 
        "'USE'", "'CALL'", "'EXPLAIN'", "'ANALYZE'", "'VERBOSE'", "'('", 
        "')'", "','", "'.'", "';'", "'*'", "'/'", "'%'", "'+'", "'-'", "'='", 
        null, "'<='", "'>='", "'<'", "'>'"
    ];

    public static readonly symbolicNames = [
        null, "SELECT", "DISTINCT", "ALL", "FROM", "WHERE", "GROUP", "BY", 
        "HAVING", "ORDER", "LIMIT", "WITH", "AS", "JOIN", "INNER", "LEFT", 
        "RIGHT", "FULL", "OUTER", "CROSS", "ON", "USING", "AND", "OR", "NOT", 
        "IN", "IS", "NULL", "TRUE", "FALSE", "LIKE", "BETWEEN", "ASC", "DESC", 
        "UNION", "INTERSECT", "EXCEPT", "VALUES", "INSERT", "INTO", "DELETE", 
        "UPDATE", "SET", "MERGE", "MATCHED", "WHEN", "THEN", "ELSE", "END", 
        "CASE", "CAST", "CREATE", "REPLACE", "TABLE", "VIEW", "SCHEMA", 
        "IF", "EXISTS", "DROP", "ALTER", "RENAME", "TO", "ADD", "COLUMN", 
        "TRUNCATE", "SHOW", "TABLES", "SCHEMAS", "CATALOGS", "COLUMNS", 
        "DESCRIBE", "USE", "CALL", "EXPLAIN", "ANALYZE", "VERBOSE", "LPAREN", 
        "RPAREN", "COMMA", "DOT", "SEMICOLON", "ASTERISK", "SLASH", "PERCENT", 
        "PLUS", "MINUS", "EQ", "NEQ", "LTE", "GTE", "LT", "GT", "STRING", 
        "DECIMAL_VALUE", "INTEGER_VALUE", "IDENTIFIER", "QUOTED_IDENTIFIER", 
        "LINE_COMMENT", "BLOCK_COMMENT", "WS"
    ];
    public static readonly ruleNames = [
        "root", "statements", "statement", "query", "withClause", "namedQuery", 
        "columnAliases", "queryExpressionBody", "queryPrimary", "valuesClause", 
        "querySpecification", "fromClause", "whereClause", "groupByClause", 
        "havingClause", "setQuantifier", "selectItem", "relation", "joinType", 
        "joinCriteria", "aliasedRelation", "relationPrimary", "tableRef", 
        "orderByClause", "sortItem", "limitClause", "insertStatement", "queryOrValues", 
        "columnRefList", "deleteStatement", "updateStatement", "updateAssignment", 
        "mergeStatement", "mergeCase", "mergeUpdateOrDelete", "createTableStatement", 
        "tableElement", "createViewStatement", "createSchemaStatement", 
        "dropStatement", "alterTableStatement", "truncateStatement", "showStatement", 
        "describeStatement", "useStatement", "callStatement", "explainStatement", 
        "expression", "booleanExpression", "predicate", "comparisonOperator", 
        "valueExpression", "primaryExpression", "whenClause", "functionCall", 
        "functionName", "columnRef", "literal", "type", "typeParam", "qualifiedName", 
        "identifier",
    ];

    public get grammarFileName(): string { return "TrinoSql.g4"; }
    public get literalNames(): (string | null)[] { return TrinoSqlParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return TrinoSqlParser.symbolicNames; }
    public get ruleNames(): string[] { return TrinoSqlParser.ruleNames; }
    public get serializedATN(): number[] { return TrinoSqlParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, TrinoSqlParser._ATN, TrinoSqlParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public root(): RootContext {
        let localContext = new RootContext(this.context, this.state);
        this.enterRule(localContext, 0, TrinoSqlParser.RULE_root);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 125;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 1 || _la === 11 || ((((_la - 33)) & ~0x1F) === 0 && ((1 << (_la - 33)) & 2248410545) !== 0) || ((((_la - 65)) & ~0x1F) === 0 && ((1 << (_la - 65)) & 2529) !== 0)) {
                {
                this.state = 124;
                this.statements();
                }
            }

            this.state = 127;
            this.match(TrinoSqlParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public statements(): StatementsContext {
        let localContext = new StatementsContext(this.context, this.state);
        this.enterRule(localContext, 2, TrinoSqlParser.RULE_statements);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 129;
            this.statement();
            this.state = 134;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 1, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    {
                    {
                    this.state = 130;
                    this.match(TrinoSqlParser.SEMICOLON);
                    this.state = 131;
                    this.statement();
                    }
                    }
                }
                this.state = 136;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 1, this.context);
            }
            this.state = 138;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 80) {
                {
                this.state = 137;
                this.match(TrinoSqlParser.SEMICOLON);
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public statement(): StatementContext {
        let localContext = new StatementContext(this.context, this.state);
        this.enterRule(localContext, 4, TrinoSqlParser.RULE_statement);
        try {
            this.state = 156;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 3, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 140;
                this.query();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 141;
                this.insertStatement();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 142;
                this.deleteStatement();
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 143;
                this.updateStatement();
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 144;
                this.mergeStatement();
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 145;
                this.createTableStatement();
                }
                break;
            case 7:
                this.enterOuterAlt(localContext, 7);
                {
                this.state = 146;
                this.createViewStatement();
                }
                break;
            case 8:
                this.enterOuterAlt(localContext, 8);
                {
                this.state = 147;
                this.createSchemaStatement();
                }
                break;
            case 9:
                this.enterOuterAlt(localContext, 9);
                {
                this.state = 148;
                this.dropStatement();
                }
                break;
            case 10:
                this.enterOuterAlt(localContext, 10);
                {
                this.state = 149;
                this.alterTableStatement();
                }
                break;
            case 11:
                this.enterOuterAlt(localContext, 11);
                {
                this.state = 150;
                this.truncateStatement();
                }
                break;
            case 12:
                this.enterOuterAlt(localContext, 12);
                {
                this.state = 151;
                this.showStatement();
                }
                break;
            case 13:
                this.enterOuterAlt(localContext, 13);
                {
                this.state = 152;
                this.describeStatement();
                }
                break;
            case 14:
                this.enterOuterAlt(localContext, 14);
                {
                this.state = 153;
                this.useStatement();
                }
                break;
            case 15:
                this.enterOuterAlt(localContext, 15);
                {
                this.state = 154;
                this.callStatement();
                }
                break;
            case 16:
                this.enterOuterAlt(localContext, 16);
                {
                this.state = 155;
                this.explainStatement();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public query(): QueryContext {
        let localContext = new QueryContext(this.context, this.state);
        this.enterRule(localContext, 6, TrinoSqlParser.RULE_query);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 159;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 11) {
                {
                this.state = 158;
                this.withClause();
                }
            }

            this.state = 161;
            this.queryExpressionBody(0);
            this.state = 163;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 9) {
                {
                this.state = 162;
                this.orderByClause();
                }
            }

            this.state = 166;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 10) {
                {
                this.state = 165;
                this.limitClause();
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public withClause(): WithClauseContext {
        let localContext = new WithClauseContext(this.context, this.state);
        this.enterRule(localContext, 8, TrinoSqlParser.RULE_withClause);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 168;
            this.match(TrinoSqlParser.WITH);
            this.state = 169;
            this.namedQuery();
            this.state = 174;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 78) {
                {
                {
                this.state = 170;
                this.match(TrinoSqlParser.COMMA);
                this.state = 171;
                this.namedQuery();
                }
                }
                this.state = 176;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public namedQuery(): NamedQueryContext {
        let localContext = new NamedQueryContext(this.context, this.state);
        this.enterRule(localContext, 10, TrinoSqlParser.RULE_namedQuery);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 177;
            this.identifier();
            this.state = 179;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 76) {
                {
                this.state = 178;
                this.columnAliases();
                }
            }

            this.state = 181;
            this.match(TrinoSqlParser.AS);
            this.state = 182;
            this.match(TrinoSqlParser.LPAREN);
            this.state = 183;
            this.query();
            this.state = 184;
            this.match(TrinoSqlParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public columnAliases(): ColumnAliasesContext {
        let localContext = new ColumnAliasesContext(this.context, this.state);
        this.enterRule(localContext, 12, TrinoSqlParser.RULE_columnAliases);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 186;
            this.match(TrinoSqlParser.LPAREN);
            this.state = 187;
            this.identifier();
            this.state = 192;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 78) {
                {
                {
                this.state = 188;
                this.match(TrinoSqlParser.COMMA);
                this.state = 189;
                this.identifier();
                }
                }
                this.state = 194;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 195;
            this.match(TrinoSqlParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public queryExpressionBody(): QueryExpressionBodyContext;
    public queryExpressionBody(_p: number): QueryExpressionBodyContext;
    public queryExpressionBody(_p?: number): QueryExpressionBodyContext {
        if (_p === undefined) {
            _p = 0;
        }
